fixed alignment on album form

--- a/frontend/src/style/Form.css
+++ b/frontend/src/style/Form.css
@@ -4,3 +4,8 @@
 	border-style: solid;
 	border-color: black;
 }
+
+.form-label {
+    padding-left: 25px !important;
+    display: block;
+}
